@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020180403"
-#define public MagickPackageReleaseDate "snapshot-20180403"
+#define public MagickPackageVersionAddendum ".020180404"
+#define public MagickPackageReleaseDate "snapshot-20180404"
